#414 Fixed bug cut off interest icon

--- a/app/assets/stylesheets/module/_related-careers.scss
+++ b/app/assets/stylesheets/module/_related-careers.scss
@@ -55,8 +55,8 @@
   @include e('interest') {
     @extend %float-left;
     margin-bottom: 0;
-    margin-left: rem(20);
-    width: auto;
+    margin-left: rem(15);
+    width: rem(257);
 
     &:first-child {
       margin-left: 0;
